--- a/manifest.yml
+++ b/manifest.yml
@@ -2,8 +2,8 @@ applications:
 - services:
   - ElephantSQL-3n
   disk_quota: 1024M
-  host: asd
-  name: asd
+  host: neredeyesek
+  name: neredeyesek
   path: .
   domain: mybluemix.net
   instances: 1
